add confidence score options, add heroku gem

--- a/app/views/lessons/show.html.haml
+++ b/app/views/lessons/show.html.haml
@@ -7,7 +7,7 @@
   = @lesson.title
 %p
   %b Body:
-  = @lesson.body
+  = simple_format(@lesson.body)
 %p
   %b Confidence score:
   = @lesson.confidence_score
