--- a/app/views/lessons/_form.html.haml
+++ b/app/views/lessons/_form.html.haml
@@ -8,20 +8,16 @@
         - @lesson.errors.full_messages.each do |msg|
           %li= msg
   .field
-    = f.label :user_id
-    %br/
-    = f.text_field :user_id
-  .field
     = f.label :title
     %br/
     = f.text_field :title
   .field
+    = f.label :confidence_score, "How confident are you at this subject / skill?"
+    %br
+    = f.select :confidence_score, Lesson::CONFIDENCE_SCORES
+  .field
     = f.label :body
     %br/
     = f.text_area :body
-  .field
-    = f.label :confidence_score
-    %br
-    = f.text_field :confidence_score
   .actions
     = f.submit
