working on front page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -10,6 +10,37 @@
       Build up a collection of lessons you created that you can refer back
       to, use on a college application, or when trying to get a job. 
 
+.explore
+  %h4 Explore Tips / Lessons
+  %ul
+    %li
+      = link_to("K - 12", "")
+      %span.small
+        \=>
+        = "#{link_to("Math", "")}, ".html_safe
+        = "#{link_to("English", "")}, ".html_safe
+        = link_to("more...", "")
+    %li
+      = link_to("College", "")
+      %span.small
+        \=>
+        Coming soon...
+    %li
+      = link_to("Grad School", "")
+      %span.small
+        \=>
+        Coming soon...
+    %li
+      = link_to("Professional", "")
+      %span.small
+        \=>
+        Coming soon...
+    %li
+      = link_to("Life", "")
+      %span.small
+        \=>
+        Coming soon...
+
 .example_lessons
   %p
     %b Algrebra 1:
