--- a/public/stylesheets/sass/site.sass
+++ b/public/stylesheets/sass/site.sass
@@ -111,7 +111,13 @@ p
   text-align: center
   padding-bottom: 24px
 
-.why
+.why, .explore
   float: right
   width: 300px
+  
+.explore
+  clear: right
+  padding-top: 24px
+  li
+    padding-bottom: 6px
 
