working on front page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -12,34 +12,29 @@
 
 .explore
   %h4 Explore Tips / Lessons
-  %ul
+  %ul.small
     %li
       = link_to("K - 12", "")
-      %span.small
-        \=>
-        = "#{link_to("Math", "")}, ".html_safe
-        = "#{link_to("English", "")}, ".html_safe
-        = link_to("more...", "")
+      &nbsp;->&nbsp;
+      = "#{link_to("Math", "")}, ".html_safe
+      = "#{link_to("English", "")}, ".html_safe
+      = link_to("more...", "")
     %li
       = link_to("College", "")
-      %span.small
-        \=>
-        Coming soon...
+      &nbsp;->&nbsp;
+      Coming soon...
     %li
       = link_to("Grad School", "")
-      %span.small
-        \=>
-        Coming soon...
+      &nbsp;->&nbsp;
+      Coming soon...
     %li
       = link_to("Professional", "")
-      %span.small
-        \=>
-        Coming soon...
+      &nbsp;->&nbsp;
+      Coming soon...
     %li
       = link_to("Life", "")
-      %span.small
-        \=>
-        Coming soon...
+      &nbsp;->&nbsp;
+      Coming soon...
 
 .example_lessons
   %p
