- working on front page - working on seed data

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,8 +9,8 @@
     = render "layouts/header"
     = render "layouts/search"
 
-    #goal
-      The Goal: To make it easier for the next person to
+    %h3#goal
+      The Goal: Make it easier / more fun for the next person to
       learn what ever you are learning right now.
 
     = yield
