--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -12,9 +12,13 @@ h1 {
   h1 .upside_down {
     font-size: 27pt; }
 
-h3 {
+h2 {
   font-weight: normal;
   font-size: 16pt; }
+
+h3 {
+  font-weight: normal;
+  font-size: 14pt; }
 
 h4 {
   padding: 6px 0;
@@ -106,16 +110,21 @@ p {
   border-bottom: 1px solid #333333; }
 
 #goal {
-  line-height: 3em;
   text-align: center;
   padding-bottom: 24px; }
 
-.why, .explore {
+.why {
+  padding-top: 6em;
   float: right;
   width: 300px; }
 
 .explore {
-  clear: right;
-  padding-top: 24px; }
+  clear: both;
+  padding-top: 30px; }
   .explore li {
     padding-bottom: 6px; }
+  .explore table {
+    width: 100%; }
+    .explore table td {
+      width: 33%;
+      vertical-align: top; }
