--- a/public/stylesheets/sass/site.sass
+++ b/public/stylesheets/sass/site.sass
@@ -94,6 +94,10 @@ p
 .text_right
   text-align: right
 
+form
+  .field
+    padding-bottom: 12px
+
 #header
   border-bottom: 1px solid #333
   overflow: hidden
