--- a/app/assets/stylesheets/site.css.sass
+++ b/app/assets/stylesheets/site.css.sass
@@ -20,9 +20,9 @@ h2
 
 h3
   font-weight: normal
-  font-size: 14pt
+  font-size: 13pt
 
-h4
+h4, h3
   padding: 6px 0
   margin: 0
 
@@ -118,18 +118,3 @@ form
   text-align: center
   padding-bottom: 24px
 
-.why
-  padding-top: 6em
-  float: right
-  width: 300px
-
-.explore
-  clear: both
-  padding-top: 30px
-  li
-    padding-bottom: 6px
-  table
-    width: 100%
-    td
-      width: 33%
-      vertical-align: top
