- working on creating lessons

--- a/app/assets/stylesheets/site.css.sass
+++ b/app/assets/stylesheets/site.css.sass
@@ -97,6 +97,9 @@ p
 form
   .field
     padding-bottom: 12px
+  .hinted
+    color: #666
+    width: 24em
 
 #header
   border-bottom: 1px solid #333
@@ -104,6 +107,9 @@ form
   text-align: center
   #logo
     float: left
+    a, a:visited
+      text-decoration: none
+      color: $fontcolor
   #basic_navigation
     float: right
     padding-top: 1.5em
