--- a/app/views/lessons/_form.html.haml
+++ b/app/views/lessons/_form.html.haml
@@ -30,5 +30,9 @@
       write out as much of your lesson as possible.
     = f.text_area :body
 
+  .add
+    = link_to("Add A Video To Your Tip / Lesson", new_lesson_video_path(@lesson))
+
+
   .actions
     = f.submit
