--- a/app/views/lessons/_lesson_header.html.haml
+++ b/app/views/lessons/_lesson_header.html.haml
@@ -1,6 +1,7 @@
 %h2
   = "#{link_to @lesson.subject, edit_lesson_path(@lesson, :edit_subject => 1)}: ".html_safe
-  = link_to @lesson.title, edit_lesson_path(@lesson, :edit_title => 1)
+  - unless @lesson.title.blank?
+    = link_to @lesson.title, edit_lesson_path(@lesson, :edit_title => 1)
 
 - unless @lesson.confidence_text.blank?
   %p
