--- a/app/views/lessons/_form.html.haml
+++ b/app/views/lessons/_form.html.haml
@@ -1,3 +1,5 @@
+= render "devise/registrations/short_form" if current_user.nil?
+
 = form_for(@lesson) do |f|
   - if @lesson.errors.any?
     #error_explanation
