- working on user registration flow

--- a/app/assets/stylesheets/lessons.css.sass
+++ b/app/assets/stylesheets/lessons.css.sass
@@ -1,3 +1,15 @@
 // Place all the styles related to the Lessons controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.must_register
+  background-color: #FFFBCC
+  padding: 6px 12px
+  margin-top: 30px
+  td
+    vertical-align: top
+    text-align: right
+  .field
+    input
+      width: 12em
+      margin-right: 12px
