--- a/app/views/devise/registrations/_short_form.html.haml
+++ b/app/views/devise/registrations/_short_form.html.haml
@@ -1,25 +1,32 @@
 .must_register
   = form_for(:user, :url => registration_path(:user)) do |f|
-    %h3 Please Register
+    %h3
+      Please Register An Account Or
+      = link_to("Log In", new_user_session_path)
     %p Your lesson will not be saved until you register an account.
-    %table.registration_fields
+    %table.registration_fields.small
       %tr
         %td
           = f.label :name, "Your Name:"
+        %td.field
           = f.text_field :name
         %td
-          = f.label :nickname, "Optional Nickname:"
+          = f.label :nickname, "Nickname (optional):"
+        %td.field
           = f.text_field :nickname
         %td
           = f.label :email, "Your Email:"
+        %td.field
           = f.email_field :email
       %tr
         %td
-          = f.label :password
+          = f.label :password, "Password:"
+        %td.field
           = f.password_field :password
         %td
-          = f.label :password_confirmation
+          = f.label :password_confirmation, "Password Confirmation:"
+        %td.field
           = f.password_field :password_confirmation
-        %td
-          = f.submit "Sign up"
+        %td{:colspan => 2, :style => "text-align: left;"}
+          = f.submit "Register Your Account"
 
