- working on lesson creation flow

--- a/app/assets/stylesheets/lessons.css.sass
+++ b/app/assets/stylesheets/lessons.css.sass
@@ -13,3 +13,9 @@
     input
       width: 12em
       margin-right: 12px
+
+.example_lesson_info
+  width: 360px
+  border: 1px solid #ccc
+  background-color: #eee
+  padding: 12px
