- tweaking header - making lesson urls sluggable

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,8 +8,11 @@
   #basic_navigation
     %p "The best way to learn is to try and teach."
     %p
-      = link_to("My Stuff", "")
-      &nbsp; | &nbsp;
-      = link_to("Register", "")
-      &nbsp; | &nbsp;
-      = link_to("Log In", "")
+      - if user_signed_in?
+        = link_to("My Stuff", "")
+        &nbsp; | &nbsp;
+        = link_to("Log Out", destroy_user_session_path, :method => :delete)
+      - else
+        = link_to("Register", new_user_registration_path)
+        &nbsp; | &nbsp;
+        = link_to("Log In", new_user_session_path)
