--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,8 +9,9 @@
     = render "layouts/header"
     = render "layouts/search"
 
-    %h3#goal
+    %h3#goal{:style => "clear: both;"}
       The Goal: Make it easier / more fun for the next person to
       learn what ever you are learning right now.
+
 
     = yield
