- facebox - adding videos flow

--- a/app/assets/stylesheets/lessons.css.sass
+++ b/app/assets/stylesheets/lessons.css.sass
@@ -22,3 +22,9 @@
 
 .photos_and_videos
   margin-top: 30px
+  width: 360px  
+  .video_thumbnail
+    overflow: hidden
+    img
+      float: left
+      margin-right: 12px
