--- a/app/views/videos/new.html.haml
+++ b/app/views/videos/new.html.haml
@@ -1,2 +1,5 @@
-%h2 Add A Video
+%h2 Add A Video To Your Lesson
+%p Please provide a title and caption for your video.
+%p You'll be able to upload your video on the next page. 
+
 = render "form"
