--- a/app/views/videos/_form.html.haml
+++ b/app/views/videos/_form.html.haml
@@ -1,21 +1,23 @@
-:javascript
-  $(function() {
-    this.checkForFile = function() {
-      if ($('#file').value) {
-        return true;
-      }
-      $('#errMsg').style.display = '';
-      return false;
-    }
+= form_for(@video, :url => lesson_videos_path) do |f|
+  - if @video.errors.any?
+    #error_explanation
+      %h2
+        = pluralize(@video.errors.count, "error")
+        prohibited this video from being saved:
+      %ul
+        - @video.errors.full_messages.each do |msg|
+          %li= msg
 
+  .field
+    %p
+      = f.label :title, "Title of your video:"
+      = f.text_field :title
 
-    $(form).submit(this.checkForFile);
-  })
+  .field
+    %p
+      = f.label :caption, "The caption for your video:"
+      %br
+      = f.text_area :caption
 
-= form_for :video, :url => @form_info["url"] + "?nexturl=http://upsidedownacademy.org", :html => {:enctype => "multipart/form-data"} do |f|
-  %input{:id => "file", :type => "file", :name => "file"}
-  #errMsg{:style => "display: none; color: red;"}
-    You need to specify a file.
-
-  = hidden_field_tag("token", @form_info["token"])
-  = submit_tag("Upload Video")
+  .actions
+    = f.submit "Save Video Information"
