- footer - first lesson tip

--- a/app/assets/stylesheets/lessons.css.sass
+++ b/app/assets/stylesheets/lessons.css.sass
@@ -2,9 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.lesson_tip
+  margin-bottom: 30px
+
 .must_register
-  background-color: #FFFBCC
-  padding: 6px 12px
+  clear: both
   margin-top: 30px
   td
     vertical-align: top
@@ -19,6 +21,7 @@
   border: 1px solid #ccc
   background-color: #eee
   padding: 12px
+  margin-bottom: 30px
 
 .photos_and_videos
   margin-top: 30px
