--- a/app/views/devise/registrations/_short_form.html.haml
+++ b/app/views/devise/registrations/_short_form.html.haml
@@ -1,4 +1,4 @@
-.must_register
+.must_register.highlighted
   = form_for(:user, :url => registration_path(:user)) do |f|
     %h3
       Please Register An Account Or
