--- a/app/assets/stylesheets/site.css.sass
+++ b/app/assets/stylesheets/site.css.sass
@@ -49,6 +49,10 @@ p
   margin: 0
   padding: 6px 0
 
+.highlighted
+  background-color: #FFFBCC
+  padding: 6px 12px
+
 #notice
   color: green
 
@@ -124,3 +128,23 @@ form
   text-align: center
   padding-bottom: 24px
 
+#footer
+  clear: both
+  margin: 60px 0
+  padding-top: 15px
+  border-top: 1px solid #333
+  overflow: hidden
+  .footer_section
+    float: left
+    width: 240px
+    padding-right: 60px
+    margin-right: 45px
+    border-right: 1px solid #ccc
+    a
+      display: block
+      line-height: 2em
+
+  .last_section
+    border: none
+    margin: 0
+    padding: 0
