--- a/app/views/layouts/_search.html.haml
+++ b/app/views/layouts/_search.html.haml
@@ -1,5 +1,5 @@
 #search
   = form_for :search, :url => root_path, :method => :get do |f|
-    = f.label("terms", "Search Tips / Lessons")
+    = f.label("terms", "Search Lessons")
     = f.text_field("terms")
     = f.submit("Search")
