--- a/app/views/resources/new.html.haml
+++ b/app/views/resources/new.html.haml
@@ -1,3 +1,7 @@
-%h1 New resource
+%h2 Reference a Great Resource In Your Lesson
+%p
+  What resources did you find helpful in learning this material?
+%p
+  This can be another lesson from this site, a book, a website, etc.
+
 = render 'form'
-= link_to 'Back', resources_path
