--- a/app/views/resources/_form.html.haml
+++ b/app/views/resources/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(@resource) do |f|
+= form_for(@resource, :url => lesson_resources_path(@lesson)) do |f|
   - if @resource.errors.any?
     #error_explanation
       %h2
@@ -8,16 +8,19 @@
         - @resource.errors.full_messages.each do |msg|
           %li= msg
   .field
-    = f.label :title
-    %br/
-    = f.text_field :title
+    %p
+      = f.label :title, "Title / name of the resource:"
+      %br
+      = f.text_field :title
   .field
-    = f.label :url
-    %br/
-    = f.text_field :url
+    %p
+      = f.label :url, "Where can you find this resource?"
+      %br
+      = f.text_field :url
   .field
-    = f.label :comments
-    %br/
-    = f.text_area :comments
+    %p
+      = f.label :comment
+      %br/
+      = f.text_area :comment
   .actions
-    = f.submit
+    %p= f.submit
