--- a/app/assets/stylesheets/site.css.sass
+++ b/app/assets/stylesheets/site.css.sass
@@ -1,12 +1,30 @@
-$fontcolor: #333
+@mixin box-shadow($horizontal, $vertical, $blur-radius, $color)
+  box-shadow: $horizontal $vertical $blur-radius $color
+  -webkit-box-shadow: $horizontal $vertical $blur-radius $color
+  -moz-box-shadow: $horizontal $vertical $blur-radius $color
+  -o-box-shadow: $horizontal $vertical $blur-radius $color
+
+@mixin inset-box-shadow($horizontal, $vertical, $blur-radius, $color)
+  box-shadow: inset $horizontal $vertical $blur-radius $color
+  -webkit-box-shadow: inset $horizontal $vertical $blur-radius $color
+  -moz-box-shadow: inset $horizontal $vertical $blur-radius $color
+  -o-box-shadow: inset $horizontal $vertical $blur-radius $color
+
+$backgroundcolor: #F2F2F2
+$headercolor: #E0E1D9
+$fontcolor: black
+$linkcolor: #F6602A
+$highlightedcolor: #FFFBCC
+$logocolor: black
 
 body
+  background-color: $backgroundcolor
+  border-top: 3px solid $logocolor 
   font-size: 11pt
-  font-family: verdana, arial, helvetica, sans-serif
+  font-family: helvetica, sans-serif
   padding: 0
-  margin: 0 auto
+  margin: 0
   color: $fontcolor
-  width: 1000px
   line-height: 1.25em
 
 h1
@@ -37,22 +55,21 @@ ul, ol
 .really_small
   font-size: 8pt
 
-a
-  color: #000
-  text-decoration: underline
+a, a:visited, a:hover
+  color: $linkcolor
   cursor: pointer
-a:visited
-  color: #666
+  text-decoration: none
+
 a:hover
-  color: #fff
-  background-color: #000
+  text-decoration: underline
+
 
 p
   margin: 0
   padding: 6px 0
 
 .highlighted
-  background-color: #FFFBCC
+  background-color: $highlightedcolor
   padding: 6px 12px
 
 #notice
@@ -107,28 +124,50 @@ form
     color: #666
     width: 24em
 
-#header
-  border-bottom: 1px solid #333
+#content_container
   overflow: hidden
-  text-align: center
-  #logo
-    float: left
-    a, a:visited
-      text-decoration: none
-      color: $fontcolor
-  #basic_navigation
-    float: right
-    padding-top: 1.5em
-    line-height: 1.5em
+  padding-bottom: 150px
+  width: 1000px
+  margin: auto
 
-#search
-  padding: 12px
-  text-align: center
-  border-bottom: 1px solid #333
+#header
+  background-color: $headercolor
+  border-bottom: 1px solid lighten($fontcolor, 40%)
+  +inset-box-shadow(3px, 3px, 12px, lighten(black, 70%))
+  margin-bottom: 15px
+  #header_content
+    width: 1000px
+    margin: auto
+    #logo
+      position: absolute
+    #basic_navigation
+      line-height: 3em
+      overflow: hidden
+      .first_nav
+        border-left: 1px solid lighten(black, 60%)
+      .basic_nav
+        float: right
+        border-right: 1px solid lighten(black, 60%)
+        padding: 0 12px
+      #site_quote
+        float: right
+        margin-left: 90px
 
 #goal
-  text-align: center
-  padding-bottom: 24px
+  float: right
+  width: 30em
+  margin-right: 6em
+  height: 3em
+  padding-bottom: 60px
+  h2
+    margin: 0
+    float: left
+    margin-right: 15px
+    padding-top: 0.5em
+
+#content
+  clear: both
+  padding: 0 30px
 
 #footer
   clear: both
