--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,20 +1,20 @@
 #header
-  #logo
-    %h1
-      = link_to("<span class='upside_down'>∩</span>pside Down <span class='upside_down'>∀</span>cademy".html_safe, root_path)
+  #header_content
+    #logo
+      = image_tag("flag_logo.png")
+      -#
+        %h1
+          = link_to("<span class='upside_down'>∩</span>pside Down <span class='upside_down'>∀</span>cademy".html_safe, root_path)
+        %h2= link_to("Where the students do the teaching", root_path)
 
-    %h2= link_to("Where the students do the teaching", root_path)
+    #basic_navigation
+      #site_quote "The best way to learn is to try and teach."
 
-  #basic_navigation
-    %p "The best way to learn is to try and teach."
-    %p
       - if user_signed_in?
-        = link_to("My Lessons", lessons_my_index_path)
-        &nbsp; | &nbsp;
-        = link_to("My Account", edit_user_registration_path)
-        &nbsp; | &nbsp;
-        = link_to("Log Out", destroy_user_session_path, :method => :delete)
+        .basic_nav= link_to("Log Out", destroy_user_session_path, :method => :delete)
+        .basic_nav= link_to("My Account", edit_user_registration_path)
+        .basic_nav.first_nav= link_to("My Lessons", lessons_my_index_path)
       - else
-        = link_to("Register", new_user_registration_path)
-        &nbsp; | &nbsp;
-        = link_to("Log In", new_user_session_path)
+        .basic_nav= link_to("Log In", new_user_session_path)
+        .basic_nav.first_nav= link_to("Register", new_user_registration_path)
+
