--- a/app/assets/stylesheets/site.css.sass
+++ b/app/assets/stylesheets/site.css.sass
@@ -14,7 +14,6 @@ $backgroundcolor: #F2F2F2
 $headercolor: #E0E1D9
 $fontcolor: black
 $linkcolor: #F6602A
-$highlightedcolor: #FFFBCC
 $logocolor: black
 
 body
@@ -69,7 +68,7 @@ p
   padding: 6px 0
 
 .highlighted
-  background-color: $highlightedcolor
+  background-color: lighten($linkcolor, 30%)
   padding: 6px 12px
 
 #notice
