--- a/app/assets/stylesheets/site.css.sass
+++ b/app/assets/stylesheets/site.css.sass
@@ -150,19 +150,15 @@ form
         padding: 0 12px
       #site_quote
         float: right
-        margin-left: 90px
+        margin-right: 142px
 
 #goal
-  float: right
-  width: 30em
-  margin-right: 6em
+  margin-left: 315px
   height: 3em
   padding-bottom: 60px
   h2
     margin: 0
-    float: left
-    margin-right: 15px
-    padding-top: 0.5em
+    padding: 0.5em 0 6px 0
 
 #content
   clear: both
