--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,7 +9,7 @@
     %li
       Build up a collection of lessons you created that you can refer back
       to, use on a college application, or when trying to get a job.
-  %p= link_to("Create a lesson", new_lesson_path)
+  %p= link_to("Create a lesson >", new_lesson_path)
 
 .example_lessons
   %p
