--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -11,7 +11,8 @@
     = link_to("For Everyone", "")
 
   .footer_section.last_section
-    = link_to("About", "")
-    = link_to("Contact", "")
+    = link_to("About", about_index_path)
+    = link_to("Contact", contact_about_index_path)
     = link_to("Press", "")
     = link_to("Donate", "")
+
