- front page tweaks

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,10 @@
+%ol.site_instructions
+  %li Learn something.
+  %li Pay attention to what you find confusing.
+  %li Come up with a way to make it less confusing / more fun for the next person.
+  %li It can be a blog post, video, dance, song, smoke signal, what ever.
+  %li= link_to("Create a lesson and make it a little easier for the next person >", new_lesson_path)
+
 .why
   %h4 Why Should I Create A Lesson?
   No matter how experienced you are in a subject or skill,
