- changing resource to reference

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,13 +9,12 @@
   %h4 Why Should I Create A Lesson?
   No matter how experienced you are in a subject or skill,
   you can create a lesson.
-  %p You'll:
+  %br
+  %br
   %ul.small
-    %li Reinforce your own learning by trying to teach it.
-    %li Make it easier for someone at a similar level to learn it.
-    %li
-      Build up a collection of lessons you created that you can refer back
-      to, use on a college application, or when trying to get a job.
+    %li There's no better way to learn something then to try and figure out how to teach it.
+    %li You'll make it easier for someone at a similar level to learn it.
+    %li You'll create a collection of lessons you can refer back to later on.
   %p= link_to("Create a lesson >", new_lesson_path)
 
 .example_lessons
